--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue3-init",
-  "version": "0.1.0",
-  "description": "",
+  "version": "1.0.3",
+  "description": "Quickly initialize the vue3 project",
   "main": "index.js",
   "bin": {
-    "init": "bin/vue3-init"
+    "vue3-init": "bin/vue3-init"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +22,9 @@
     "json2ts": "^0.0.7",
     "ora": "^4.0.4",
     "shelljs": "^0.8.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/912380760/vue3-init"
   }
 }
